fix issue 3083: check user_name claim type (#3084)
* Add test for issue 3083

* Fix: use same more robust method to get user_name

similar to other attributes